--- a/public/index (2).html
+++ b/public/index (2).html
@@ -9,14 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>Admin Panel</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+       <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css"/>
+        <title>Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
-  </body>
+      </body>
 </html>
